samples/_failures_safe/1761071658_bb506b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53046aa1.c: In function ‘main’:
./samples/SAFE/__tmp_53046aa1.c:166:12: error: missing terminating " character
  166 |     printf("Enter expression to token
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_53046aa1.c:166:5: error: expected expression at end of input
  166 |     printf("Enter expression to token
      |     ^~~~~~
./samples/SAFE/__tmp_53046aa1.c:166:5: error: expected declaration or statement at end of input
